; ModuleID = '/home/carl/AnghaBench/systemd/src/udev/extr_udev-builtin-hwdb.c_builtin_hwdb_init.c'
source_filename = "/home/carl/AnghaBench/systemd/src/udev/extr_udev-builtin-hwdb.c_builtin_hwdb_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hwdb = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @builtin_hwdb_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @builtin_hwdb_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i64, i64* @hwdb, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %13

6:                                                ; preds = %0
  %7 = call i32 @sd_hwdb_new(i64* @hwdb)
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* %2, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %6
  %11 = load i32, i32* %2, align 4
  store i32 %11, i32* %1, align 4
  br label %13

12:                                               ; preds = %6
  store i32 0, i32* %1, align 4
  br label %13

13:                                               ; preds = %12, %10, %5
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @sd_hwdb_new(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
